mypy_tests/negative.output.expected
negative.py:10: error: Incompatible return value type (got "bool", expected "str")
negative.py:14: error: Incompatible return value type (got "bool", expected "str")
negative.py:17: error: Argument 1 to "arg_type" has incompatible type "Callable[..., Any]"; expected "int"
Found 3 errors in 1 file (checked 1 source file)
